# OntoJSON

./: LAUNCHING_ONTOJSON.md  OntoJSON.command  PROPERTY_REQUIREMENTS_COMPLETE.md  PROPERTY_REQUIREMENTS_FIX.md  QUICK_START.md  README.md  SOLUTION_GUIDE.md  architecture.md  create_app_bundle.sh  credits.txt  debug_abox.ttl  debug_instances.json  launch_from_pycharm.py  launch_ontojson.py  owl2jsonschema_gui.py  owlrl_issue_diagnosis.md  pyproject.toml  run_ontojson_gui.py  sample_config.json  test_all_variants.py  test_check_required.py  test_debug_abox_conversion.py  test_debug_partof.py  test_debug_variants.py  test_default_config.py  test_disjoint_classes.py  test_final_verification.py  test_gui_config.py  test_gui_defaults.py  test_instances.json  test_optional_properties.py  test_properties_assignment.py  test_schema.json  test_thing_inheritance.py  transformation_rules.md
Documentation/: for_testing.graphol  readme.md  test ontology for OWL to JSON schema transformation, other variant.ttl  test ontology for OWL to JSON schema transformation, variant.ttl  test ontology for OWL to JSON schema transformation.jsonld  test ontology for OWL to JSON schema transformation.owl  test ontology for OWL to JSON schema transformation.properties  test ontology for OWL to JSON schema transformation.rdf
build_system/: README.md  build_app.py  build_from_pycharm.py  requirements.txt
examples/: person_ontology.owl
test_output/: 250814 schema.json  default_config_schema.json  schema.json  test ontology for OWL to JSON schema transformation.jsonld  test ontology for OWL to JSON schema transformation_schema.json
test_results/: transformation_output.json
tests/: __init__.py  test_abox_to_json.py  test_all_variants.py  test_engine.py  (+14 more)
(+34 files in other folders)
