[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "owl2jsonschema"
version = "0.1.0"
description = "A configurable transformation engine for converting OWL/RDF ontologies to JSON Schema"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rdflib>=6.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.0.0",
    "requests>=2.25.0",  # Better URL handling
    "certifi>=2021.0.0",  # SSL certificates
]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
    "pre-commit>=2.20.0",
]

[project.scripts]
owl2jsonschema = "owl2jsonschema.cli:main"
owl2jsonschema-gui = "owl2jsonschema_gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]